...
        )
        IconButton(
            onClick = { onDismissRequest() },
        ) {
            Icon(
                imageVector = Icons.Default.Close,
                contentDescription = "닫기",
            )
        }
    }
}

@Preview
...
